--- a/13-secure.Rmd
+++ b/13-secure.Rmd
@@ -2,74 +2,73 @@
 
 ## Using Version Control with `git`
 
-"Friends don't let friends work on a coding project without version control." 
+"Friends do not let friends work on a coding project without version control." 
 You might have heard this before, without really considering what this means. 
-Or maybe you're convinced about this saying, but haven't had the opportunity to use git, GitHub or Gitlab for versioning your applications. 
+Or maybe you are convinced about this saying, but have not had the opportunity to use git, GitHub or Gitlab for versioning your applications. 
 If so, now is the time for a workflow change!
 
 ### Why Version Control?
 
-Have you ever experience a piece of code disappearing? 
+Have you ever experienced a piece of code disappearing? 
 Or the unsolvable problem of integrating changes when several people have been working on the same piece of code? 
-Or the inability to find back something you've written a while back?
+Or the inability to find back something you have written a while back?
 
-If so, you might have been craving for Version Control (now shortened VC).
-In this chapter, we'll be focusing on `git`, but you should be aware that other VC system exist, but they are less popular than `git`. 
+If so, you might have been missing Version Control (also shortened as VC).
+In this chapter, we'll be focusing on `git`, but you should be aware that other VC system exist, but they are less popular than `git`, hence we will not cover them here.
 `Git` was designed to handle collaboration on code projects^[
-It was first developed by Linus Torvalds, the very same man behind Linux
+It was first developed by Linus Torvalds, the very same man behind Linux.
 ] where potentially a lot of people have to interact and make changes to the codebase.
-`Git` might feel a little bit daunting at first, and even seasoned developers still misuse it, or don't understand it completely. 
-But don't give up: the benefits from learning it really outweigh the (apparent) complexity.
+`Git` might feel a little bit daunting at first, and even seasoned developers still misuse it, or do not understand it completely, but getting at ease with the basics will significantly improve the way you build software, so do not give up: the benefits from learning it really outweigh the (apparent) complexity.
 
-There are many advantages to VC, and here is a non-exhaustive list:
+There are many advantages to VC, including:
 
 + __You can get back in time__. 
-With a VC system like `git`, every change is recorded (well, every __committed__ change), meaning that you can potentially get back in time to a previous version of a project. 
-Crucial if you accidentally made changes that break your application, or if you deleted a feature you thought you'd never need. 
+With a VC system like `git`, every change is recorded (well, every __committed__ change), meaning that you can potentially get back in time to a previous version of a project, and see the complete history of a file. 
+This feature is very important: if you accidentally made changes that break your application, or if you deleted a feature you thought you'd never need, you can go back to where you were a few hours, a few days, a few months back.
 
 + __Several people can work on the same file__. 
 `Git` relies on a system of branches. 
 Within this branch pattern, there is one main branch, called "Master", which contains the stable, main version of the code-base. 
-By "forking" this branch (or any other branch actually), developers will have a copy of the base branch, where they can safely work on changing (and breaking) things, without impacting the origin branch. 
+By "forking" this branch (or any other branch), developers will have a copy of the base branch, where they can safely work on changing (and breaking) things, without impacting the origin branch. 
 This allows to try things in a safe environment, without touching what is working. 
 
 + __You can safely track changes__. 
 Every time a developer records something to `git`, changes are listed.
-In other words, you can see what changes are made to a specific file in your code base. 
+In other words, you can see what changes are made to a specific file in your codebase.
 
-+ __It centralizes the code base__. 
-You can use `git` locally, but its strength also relies on the ability to synchronize your local project with one on a server. 
++ __It centralizes the codebase__. 
+You can use `git` locally, but its strength also relies on the ability to synchronize your local project with the one on a distant server. 
 This also means that _several_ people can synchronize with this server and collaborate on a project. 
-That way, changes on a branch on a server can be downloaded (it's called `pull` in `git` terminology) by all the members of the team. 
+That way, changes on a branch on a server can be downloaded (it is called `pull` in `git` terminology) by all the members of the team, and synchronized locally, _i.e_ if someone makes changes to a branch and send them to the main server, all the other developers can retrieve these change on their machine.
 
 ### `Git` basics: `commit` - `push` - `pull`
 
-These are the three main actions you'll be performing in `git`, and if you just need to learn the minimum to get started, they are the three essential ones. 
+These are the three main actions you will be performing in `git`, and if you just need to learn the minimum to get started, they are the three essential ones. 
 
 #### `commit`
 
 A `commit` is a photography of a codebase at a given moment in time. 
-Every commits is associated with two things: a `sha1`, which is a unique reference in the history and that allows you to identify this precise state when you need to get back in time, and a `message`, which is a piece of text that describes the commit^[
+Every commits is associated with two things: a `sha1`, which is a unique reference in the history of the project and that allows you to identify this precise state when you need to get back in time, and a `message`, which is a piece of text that describes the commit^[
 For example: "Added a graph in the analysis tab", or "Fixed the docx export bug"
 ]. 
-Note that message are mandatory: you can't commit without them. 
-Don't overlook these messages: they might seem like a constraint at first but they are a life save when you need to understand the history of a project.
+Note that message are mandatory, you can not commit without them, and the `sha1` are automatically generated by `git`. 
+Do not overlook these messages: they might seem like a constraint at first but they are a life saver when you need to understand the history of a project.
 
 There is no strict rule about what and when to commit. 
-Just keep in mind that commits are what allow you to get back in time, so a commit is a complete state of your code base to which it would make sense to get back to. 
+Just keep in mind that commits are what allow you to get back in time, so a commit is a complete state of your codebase to which it would make sense to get back to. 
 
 #### `push`
 
-Once you've get a set of commits ready, you're ready to `push` it to the server. 
-In other word, you'll permanently record these commits (so the series of changes) to the server. 
+Once you've get a set of commits ready, you are ready to `push` it to the server. 
+In other word, you will permanently record these commits (so the series of changes) to the server. 
 
 Making a push implies two things: 
 
-+ Other people in the team will be able to retrieve the changes you've made
++ Other people in the team will be able to retrieve the changes you have made
 
 + These changes will be recorded permanently in the project history^[
-Well, it's technically possible to erase things from the server history, but it's dangerous to do so and generally accepted as a bad practice.
-].
+Well, it is technically possible to erase things from the server history, but it is dangerous to do so and generally accepted as a bad practice.
+]
 
 #### `pull`
 
@@ -77,24 +76,25 @@ Once changes have be recorded in the main server, everybody synchronized with th
 
 ### About branches
 
-Branches are `git` way to organize work and ideas, and notably when several people are collaborating on the same project (which might be the case when building large web applications with R).
+Branches are `git` way to organize work and ideas, notably when several people are collaborating on the same project (which might be the case when building large web applications with R).
 
 How does it work? 
-When your start a project, you're in the main branch, which is called the "Master".
+When your start a project, you are in the main branch, which is called the "Master".
 In a perfect world, you never work directly on this branch: it should always contain a working, deployable version of the application. 
 One 
 
 Other branches are to be thought as work areas, where developers fix bugs or add features. 
 The modifications made in these dev branches will then be transferred (directly or indirectly) to the master branch.
 
-// TODO image about branching
+![](img/Git_branches_fork.svg)
 
-In practice, you might want to use a workflow where each branch is designed to fix a small issue or implement a feature, so that it's easier to separate each small part of the work.
+In practice, you might want to use a workflow where each branch is designed to fix a small issue or implement a feature, so that it is easier to separate each small part of the work.
 
 ### Issues
 
-If you are working with a remote tool like GitHub or GitLab, there's a good change you'll be using issues. Issues are "notes" that can be used to track a bug or to suggest a feature. 
-This tools is crucial when it comes to project management: they are the perfect spot for organizing and discussing ideas, but also to have an overview of what has been done, what is currently done and what's left to be done. 
+If you are working with a remote tool like GitHub or GitLab, there is a good change you will be using issues. 
+Issues are "notes" or "tickets" that can be used to track a bug or to suggest a feature. 
+This tools is crucial when it comes to project management: they are the perfect spot for organizing and discussing ideas, but also to have an overview of what has been done, what is currently done and what is left to be done. 
 Issue can also be used as a discussion medium with beta testers, clients or sponsors. 
 
 One other valuable feature of issues is that they can be referenced inside commits. 
@@ -104,27 +104,27 @@ In other words, when you send code to the centralized server, you can link this 
 
 ### With RStudio
 
-Git is very well integrated to the Rstudio IDE, and while working on your app using git can be as simple as clicking on a button from time to time. 
-If you are using RStudio, you'll find a pull/push button, a stage & commit interface, a tool for visualizing diff in files. 
+Git is very well integrated to the Rstudio IDE, and using `git` can be as simple as clicking on a button from time to time. 
+If you are using RStudio, you will find a pull/push button, a stage & commit interface, a tool for visualizing diff in files. 
 Everything you need to get started is there. 
 
 ### As part of a larger world
 
-Git is not reserved for team work: even if you are working alone on a project, using git is definitely worth the effort. 
-Using git, and particularly issues, helps you organize your train of thoughts, especially upfront when you need to plan what you'll be doing. 
+`Git` is not reserved for team work: even if you are working alone on a project, using `git` is definitely worth the effort. 
+Using git, and particularly issues, helps you organize your train of thoughts, especially upfront when you need to plan what you will be doing. 
 
-And of course, remember that git isn't reserved to Shiny Applications: it can be used for any other R related projects, and at the end of the day for any code related projects, making it a valuable skill to have in your toolbox, whatever language you'll be working with in 10 years!
+And of course, remember that `git` is not reserved to Shiny Applications: it can be used for any other R related projects, and at the end of the day for any code related projects, making it a valuable skill to have in your toolbox, whatever language you will be working with in 10 years!
 
 ### About `git-flow`
 
-There are a lot of different ways and methodologies to organise your Git workflow. 
+There are a lot of different ways and methodologies to organize your Git workflow. 
 One of the most popular one is called `git flow`, and we will give you here a quick introduction to how you can manage your work using this approach. 
 Please note that this is a quick introduction, not a complete guide: we will link to some further reading just at the end of this section. 
 
 So, here are the key concept of `git flow`: 
 
-+ The `master` branch only contains stable code: most of the time is matches a taggable, fixed version (v0.0.1, 0.1.0, v1.0.0, etc). 
-A very small subset of developers involved in the project have writting access, and no developer should ever push code straight to this branch: new code to master only comes either from the `dev` branch, or from a `hotfix` branch. 
++ The `master` branch only contains stable code: most of the time is matches a tagged, fixed version (v0.0.1, 0.1.0, v1.0.0, etc). 
+A very small subset of developers involved in the project have writing access to the `master` branch, and no developer should ever push code straight to this branch: new code to `master` only comes either from the `dev` branch, or from a `hotfix` branch. 
 
 + The `dev` branch, on the other hand, is the "Work in progress" branch: the one that contains the latest changes before they are merged into master. 
 This is the common working branch for every developers. 
@@ -140,7 +140,7 @@ Here is a summary of this process:
 
 ![](img/GitFlowHotfixBranch.png)
 
-And, from a software engineer point of view, here is how daily work goes: 
+From a software engineer point of view, here is how daily work goes: 
 
 + Identify an issue to work on
 
@@ -148,20 +148,21 @@ And, from a software engineer point of view, here is how daily work goes:
 
 + Develop feature inside the branch
 
-+ `git stash`, `git rebase dev`, and `git stash apply` to include the latest changes from `dev`
++ Regularly, run `git stash`, `git rebase dev`, and `git stash apply` to include the latest changes from `dev` to stay synchronized with `dev`
 
 + Make a pull request to `dev` so that the feature is included
 
-+ Once the PR is accepted by the project manager, notify the rest of the team that there have been changes to `dev`
++ Once the PR is accepted by the project manager, notify the rest of the team that there have been changes to `dev`, so they can rebase it to the branch they are working on
 
 + Start working on a new feature
 
-Of course, there are way more subtleties to this flow of work. 
+Of course, there are way more subtleties to this flow of work, but this gives you a good starting point. 
 
 ### Further readings on `git`
 
-Git can be used in different ways and different approaches exist. The comprehensiveness of the different possible approaches is beyond the scope of this book, and other resources exist as well. We invite you to follow these different links:
-
+Git can be used in different ways and different approaches exist. 
+The comprehensiveness of the different possible approaches is beyond the scope of this book, and other resources exist as well. 
+You can find more under these links:
 
 + https://happygitwithr.com/
 + https://git-scm.com/book
@@ -175,32 +176,34 @@ What we have described is a way to build it locally, before running your test on
 But there is a big flaw to this approach: you have to remember to run the tests, be it regularly or before making a pull request/pushing to the server. 
 To do this kind of job, you will be looking for a tool to do automated testing at the repository level: in other words, a software that can test your application whenever a piece of code is pushed/moved on the repository.
 
-To do this, various tools are available, each with there own specifities. 
+To do this, various tools are available, each with there own features. 
 Here is a non exhaustive list of the one you can choose:
 
-[travis-ci](https://travis-ci.org/) is a software that can be synced with your git repositories, and whenever something happens on the repo, the events described in the travis yaml are executed. 
+[travis-ci](https://travis-ci.org/) is a software that can be synced with your `git` repositories, and whenever something happens on the repo, the events described in the travis `yaml` are executed. 
 If they exit with a code 0, the test passes. 
-If they don't, the integrated tests have failed. 
-This travis integration can be used internally and externally: internally, in the sense that before merging any pull request, the project manager have access to a series of tests that are automatically launched. Externally, as a "health check" before installing a software: if you visit a GitHub repository that has travis badges included, you can check if the current state of the package / software is stable, i.e. if it passes the tests.
+If they do not, the integrated tests have failed. 
+This travis integration can be used internally and externally: internally, in the sense that before merging any pull request, the project manager have access to a series of tests that are automatically launched. 
+Externally, as a "health check" before installing a software: if you visit a GitHub repository that has travis badges included, you can check if the current state of the package/software is stable, i.e. if it passes the automated tests.
 
-Travis can do a lot more than just testing your app: it can be used to build documentation, deploy to production, or any other scripts you want to be run before/after the tests have passed. And the nice thing is that you can test for various versions of R, so that you are sure that you are supporting current, future and previous versions of R. 
+Travis can do a lot more than just testing your app: it can be used to build documentation, deploy to production, or to run any other scripts you want to be run before/after the tests have passed. 
+And the nice thing is that you can test for various versions of R, so that you are sure that you are supporting current, future and previous versions of R. 
 
 All of this is defined in the `.travis.yml` file, which is to be put at the root of your source directory, a file that is automatically generated when calling `usethis::use_travis()`.
 Here is an example of one of this file, for the `{golem}` package:
 
-```{r echo = FALSE,warning=FALSE, comment=""}
+```{r 13-secure-1, echo = FALSE,warning=FALSE, comment=""}
 readLines("https://raw.githubusercontent.com/ThinkR-open/golem/dev/.travis.yml") %>% 
   glue::as_glue() %>% 
   cat(sep = "\n")
 ```
 
 [GitHub actions](https://github.com/features/actions) serve a related purpose: defining actions to be performed as responses to events on the GitHub repository. 
-Testing, building documentation, push to another repository, deploy on the server... all these actions can be automaticall performed. 
-As with travis, these actions are defined in a YAML. 
+Testing, building documentation, push to another repository, deploy on the server... all these actions can be automatically performed. 
+As with travis, these actions are defined in a `yaml` file. 
 Examples for these configuration can be find at [r-lib/actions](https://github.com/r-lib/actions). 
 
-If you are not working with GitHub but with GitLab, you can use the integrated `GitLab CI` service: it serves the same purpose as the two other services, with the little difference that it's completly docker-based: you define a YAML with a series of stages that are performed (concurrently or sequentially), and they are all launched inside a docker container. 
-To help you with this, the [`colinfay/r-ci-tidyverse`](https://hub.docker.com/r/colinfay/r-ci-tidyverse) docker image comes with preinstalled packages for testing: `{remotes}`, `{testthat}`, `{vdiffr}`, `{config}`... and is available for several R versions. 
+If you are not working with GitHub but with GitLab, you can use the integrated `GitLab CI` service: it serves the same purpose as the two other services, with the little difference that it is completely docker-based: you define a `yaml` with a series of stages that are performed (concurrently or sequentially), and they are all launched inside a docker container. 
+To help you with this, the [`colinfay/r-ci-tidyverse`](https://hub.docker.com/r/colinfay/r-ci-tidyverse) docker image comes with pre-installed packages for testing: `{remotes}`, `{testthat}`, `{vdiffr}`, `{config}`... and is available for several R versions. 
 This docker image can be used as the source image for your `GitLab CI` yaml file. 
 
 Here is an example of one of these files
@@ -236,6 +239,6 @@ documenting:
             - public
 ```
 
-Automated testing, continuous integration and continuous deployment is a vast topic that can't be covered in a few pages inside this book, but spending some time learning about is is definitely worth the time spent: the more you can automate processes, and the more you test, the more your application will be resilient, easy to maintain and easy to enhance. 
-Indeed, the more you check, the quicker you will discover bugs. 
+Automated testing, continuous integration and continuous deployment is a vast topic that can not be covered in a few pages inside this book, but spending some time learning about this methodologies is definitely worth the time spent: the more you can automate these processes, and the more you test, the more your application will be resilient, easy to maintain and easy to enhance: the more you check, the quicker you will discover bugs. 
+
 And the quicker you detect bugs, the easier it is to correct them!
